recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:4: error: not found: value void
	void avance(100)
        ^FourSquare:5: error: not found: value void
	void droite(90)
        ^FourSquare:6: error: not found: value void
	void avance(100)
        ^FourSquare:7: error: not found: value void
	void droite(90)
        ^FourSquare:8: error: not found: value void
	void avance(100)
        ^FourSquare:9: error: not found: value void
	void droite(90)
        ^FourSquare:10: error: not found: value void
	void avance(100)
        ^