recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
def carre() {
	void avance(100)
	void droite(90)
	void avance(100)
	void droite(90)
	void avance(100)
	void droite(90)
	void avance(100)
}
for (i<-1 to 4){
	carre();
}
}
